fix: navbar collapse responsive scss theme color var

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -40,7 +40,7 @@
   }
 
   .navbar-collapse {
-    background-color: $header-dark-bg;
+    background-color: var(--bs-body-bg);
     border-top: 1px solid rgba(0, 0, 0, .1);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
   }
